<resources>
    <string name="app_name">EventReminder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Today\'s notifications</string>
    <string name="second_fragment_label">New Event</string>
    <string name="register_login_fragment_label">Login/register</string>
    <string name="next">Next</string>
    <string name="previous">Cancel</string>
    <string name="save">Save</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_eventlist_title">Event list</string>
    <string name="tv_eventlist_new">ADD</string>
    <string name="tv_todo_name">TODO item</string>
    <string name="cd_event_description">warning</string>
    <string name="et_event_title">Insert title</string>
    <string name="et_event_desc">Insert description</string>
    <string name="tv_new_event_title">New</string>
    <string name="im_content_description_back">Back</string>
    <string name="content_description_horizontal_line">horizontal_line</string>
    <string name="content_description_calendar">calendar</string>
    <string name="content_description_delete_event">delete event</string>
    <string name="dialog_message">Do you want to delete this event?</string>
    <string name="dialog_title">Delete event</string>
    <string name="msg_token_fmt"> Your device registration token is %1$s</string>
    <string name="tv_notify_me_placeholder">Notify me</string>
    <string name="ib_content_description_set_time">Time selection</string>
    <string name="tv_set_time_dialog_title">Set time</string>
    <string name="tv_time_placeholder">00:00</string>
    <string name="fab_content_description">Action button</string>
    <string name="iv_content_description_notification_add">Add new notification</string>
    <string name="iv_time_notification_content_description">Event time notification</string>
    <string name="register_login_fragment_email_title">Email</string>
    <string name="register_login_fragment_username_title">User name</string>
    <string name="register_login_fragment_username_psw">Password</string>
    <string name="register_login_fragment_username_psw_confirm">Confirm Password</string>
    <string name="register_login_fragment_btn_login">Login</string>
    <string name="register_login_fragment_btn_register">Register</string>
    <string name="to_login_fragment">Already have an account?</string>
    <string name="to_register_fragment"><b> New user? register now! </b></string>
    <string name="application_name">Event Reminder</string>
</resources>